
syntax = "proto3";

import "google/protobuf/duration.proto";
import "proto/resource.proto";

package hit_tracker;

// Contains information about an artifact that was downloaded from the cache.
message Download {
  // The resource that was downloaded. Only digest and compressor are used.
  resource.ResourceName resource = 1;

  // The number of bytes that were downloaded.
  int64 size_bytes = 2;

  // The time taken for the download.
  google.protobuf.Duration duration = 3;
}

// Information about cache hits for a particular invocation.
message CacheHits {
  // The invocation ID associated with this cache hit information.
  string invocation_id = 1;

  // The number of empty digests that "hit" the cache.
  int64 empty_hits = 2;

  // Information about cache downloads (size, duration, etc.).
  repeated Download downloads = 3;
}

message TrackRequest {
  repeated CacheHits hits = 1;
}

message TrackResponse {}

service HitTrackerService {
  rpc Track(TrackRequest) returns (TrackResponse);
}
